--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -26,7 +26,7 @@
     <p>No trains are available from the API.</p>
     {% endif %}
     <div class="image-container">
-      <img id="dynamic-image" src="/media/866-536x354.jpg" alt="Dynamic Image">
+      <img id="dynamic-image" src="/media/2021-08-07T11_57_25Google Pixel 3a.jpg" alt="Dynamic Image">
     </div>
   <script>
     $(document).ready(function() {
